# battle-sheep

./: .pylintrc  LICENSE  README.md  pyproject.toml
dokumentaatio/: kayttoohje.md  testausraportti.md  toteutusraportti.md  vaatimusmaarittely.md
dokumentaatio/viikkoraportit/: viikko_1.md  viikko_2.md  viikko_3.md  viikko_4.md  viikko_5.md  viikko_6.md
src/: board.py  constants.py  game.py  heuristic.py  hexagon.py  index.py  main.py  minimax.py  move.py  pasture.py  ui.py  utils.py
src/tests/: game_test.py  minimax_test.py  pasture_test.py
