[tool.poetry]
name = "battle-sheep"
version = "0.1.0"
description = "Battle Sheep game"
authors = ["Markus Kuosmanen <markus.kuosmanen@robu.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
