[tool.poetry]
name = "battle-sheep"
version = "0.1.0"
description = "Battle Sheep game"
authors = ["Markus Kuosmanen <markus.kuosmanen@robu.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.1.0"
mypy = "^1.9.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
